--- a/widgets/main-gynecology/main-gynecology.scss
+++ b/widgets/main-gynecology/main-gynecology.scss
@@ -26,10 +26,6 @@
         color: $grey-1;
         text-align: left;
         
-        @media (max-width: 768px) {
-            @include body-sm;
-        }
-        
         [dir="rtl"] & {
             text-align: right;
         }
@@ -76,12 +72,12 @@
         
         @media (max-width: 768px) {
             padding: 25px 20px;
-            height: 150px;
+            height: 180px;
         }
         
         @media (max-width: 480px) {
             padding: 20px 15px;
-            height: 140px;
+            height: 170px;
         }
     }
     
@@ -111,5 +107,13 @@
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;
         line-height: 1.4;
+        
+        @media (max-width: 768px) {
+            -webkit-line-clamp: 4;
+        }
+        
+        @media (max-width: 480px) {
+            -webkit-line-clamp: 4;
+        }
     }
 }
