--- a/pages/about/index.scss
+++ b/pages/about/index.scss
@@ -89,6 +89,7 @@
       max-width: 100%;
       float: left !important; /* Обтекание текста справа */
       margin-right: 20px; /* Отступ от текста */
+      margin-top: 15px; /* Отступ от заголовка */
       min-width: 400px; /* Минимальная ширина */
       flex-shrink: 0; /* Не сжимается */
 
@@ -184,7 +185,45 @@
     padding-top: 20px;
     margin-bottom: 30px;
   }
+}
 
+// RTL стили для about блоков
+[dir="rtl"] {
+  .about-block-center {
+    margin-left: 0;
+    margin-right: calc(-50vw + 50%);
+    
+    .about__title-main {
+      text-align: right;
+    }
+  }
+  
+  .about-block-bottom {
+    margin-left: 0;
+    margin-right: calc(-50vw + 50%);
+    
+    .about__title-faq {
+      text-align: right;
+    }
+  }
+  
+  .about__anons-img {
+    float: right;
+    margin-right: 0;
+    margin-left: 20px;
+  }
+  
+  .about__description-img {
+    float: left;
+    margin-left: 0;
+    margin-right: 20px;
+  }
+  
+  .about__video-content {
+    float: right !important;
+    margin-right: 0 !important;
+    margin-left: 20px !important;
+  }
 }
 
 
