--- a/pages/course/index.scss
+++ b/pages/course/index.scss
@@ -194,4 +194,43 @@
 
 }
 
+// RTL стили для course блоков
+[dir="rtl"] {
+  .course-block-center {
+    margin-left: 0;
+    margin-right: calc(-50vw + 50%);
+    
+    .course__title-main {
+      text-align: right;
+    }
+  }
+  
+  .course-block-bottom {
+    margin-left: 0;
+    margin-right: calc(-50vw + 50%);
+    
+    .course__title-faq {
+      text-align: right;
+    }
+  }
+  
+  .course__anons-img {
+    float: right;
+    margin-right: 0;
+    margin-left: 20px;
+  }
+  
+  .course__description-img {
+    float: left;
+    margin-left: 0;
+    margin-right: 20px;
+  }
+  
+  .course__video-content {
+    float: right !important;
+    margin-right: 0 !important;
+    margin-left: 20px !important;
+  }
+}
+
 
