--- a/pages/massage/index.scss
+++ b/pages/massage/index.scss
@@ -204,6 +204,45 @@
 
 }
 
+// RTL стили для massage блоков
+[dir="rtl"] {
+  .massage-block-center {
+    margin-left: 0;
+    margin-right: calc(-50vw + 50%);
+    
+    .massage__title-main {
+      text-align: right;
+    }
+  }
+  
+  .massage-block-bottom {
+    margin-left: 0;
+    margin-right: calc(-50vw + 50%);
+    
+    .massage__title-faq {
+      text-align: right;
+    }
+  }
+  
+  .massage__anons-img {
+    float: right;
+    margin-right: 0;
+    margin-left: 20px;
+  }
+  
+  .massage__description-img {
+    float: left;
+    margin-left: 0;
+    margin-right: 20px;
+  }
+  
+  .massage__video-content {
+    float: right !important;
+    margin-right: 0 !important;
+    margin-left: 20px !important;
+  }
+}
+
 
 
 
