--- a/pages/about/index.scss
+++ b/pages/about/index.scss
@@ -226,4 +226,23 @@
   }
 }
 
+// Стили для кнопок "Назначить встречу"
+.about__appointment-btn {
+  text-align: left;
+  margin: 30px 0;
+  
+  .about__appointment-button {
+    width: 254px;
+    height: 50px;
+    padding: 0;
+  }
+}
+
+// RTL стили для кнопок
+[dir="rtl"] {
+  .about__appointment-btn {
+    text-align: right;
+  }
+}
+
 
