--- a/pages/story/index.scss
+++ b/pages/story/index.scss
@@ -197,6 +197,25 @@
   }
 }
 
+// Стили для кнопок "Назначить встречу"
+.story__appointment-btn {
+  text-align: left;
+  margin: 30px 0;
+  
+  .story__appointment-button {
+    width: 254px;
+    height: 50px;
+    padding: 0;
+  }
+}
+
+// RTL стили для кнопок
+[dir="rtl"] {
+  .story__appointment-btn {
+    text-align: right;
+  }
+}
+
 .story-block-bottom {
   background-color: $grey-3;
   padding: 60px 0;
