Added type Gynecology

--- a/app/scss/_colors.scss
+++ b/app/scss/_colors.scss
@@ -22,12 +22,12 @@ $brown-2: #CCB29F;
 $brown-4: #AB8D7A;
 
 // Language Switcher Colors
-$lang-bg: #f8f9fa;
-$lang-border: #e9ecef;
-$lang-text: #6c757d;
-$lang-text-active: #495057;
-$lang-hover: #e9ecef;
-$lang-active: #dee2e6;
+$lang-bg: $grey-7;
+$lang-border: $grey-4;
+$lang-text: $primary;
+$lang-text-active: $primary;
+$lang-hover: $grey-4;
+$lang-active: $primary;
 
 
 
