--- a/shared/breadcrumbs-page/breadcrumbs-page.scss
+++ b/shared/breadcrumbs-page/breadcrumbs-page.scss
@@ -3,7 +3,13 @@
 
 .breadcrumb-link {
   @include body-lg;
-  @include link-black ;
+  color: $black;
+  cursor: pointer;
+  transition: color 0.3s ease;
+  
+  &:hover {
+    color: $brown-7;
+  }
 }
 
 .breadcrumb-title {
