--- a/pages/surgery/media.scss
+++ b/pages/surgery/media.scss
@@ -2,7 +2,7 @@
 @import '../../app/scss/colors';
 
 @media screen and (max-width: 767px) {
-  .course {
+  .surgery {
     &__anons {
       display: flex;
       flex-direction: column;
@@ -18,14 +18,14 @@
     }
   }
 
-  .block-courses {
+  .block-surgeries {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
     padding-bottom: 40px;
   }
 
-  .course__video {
+  .surgery__video {
     display: block; /* Стандартное поведение для мобильных устройств */
     padding-bottom: 20px;
 
